fix: Mobile responsiveness for notifications and SPA routing
Major Updates:
- Fixed notification dropdown and Sound On button for mobile view in Admin/Agent dashboards
- Added mobile-optimized notification popup with backdrop overlay
- Improved AdminAnnouncements page responsive layout
- Fixed Render deployment SPA routing (404 on page refresh)
- Added notification bell to DashboardLayout with mobile support

Mobile Optimizations:
- Notification dropdown: Full-width modal on mobile with backdrop
- Sound button: Responsive text sizes and padding
- Admin announcements: Stacked layout, wrapping badges, responsive cards
- DashboardLayout: Bell icon with dropdown for admin/agent roles

SPA Routing Fixes:
- Updated render.yaml with proper rewrite rules
- Added 404.html fallback page
- Added vercel.json for alternative deployment
- Created comprehensive deployment documentation

Files Modified:
- src/pages/admin/AdminDashboard.jsx
- src/pages/agent/AgentDashboard.jsx
- src/pages/admin/AdminAnnouncements.jsx
- src/layouts/DashboardLayout.jsx
- render.yaml
- Added: DASHBOARD_NOTIFICATION_MOBILE_FIX.md
- Added: MOBILE_RESPONSIVENESS_UPDATES.md
- Added: RENDER_SPA_FIX.md
- Added: public/404.html
- Added: vercel.json

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     runtime: static
     buildCommand: npm install --legacy-peer-deps && npm run build
     staticPublishPath: ./dist
+    pullRequestPreviewsEnabled: true
     envVars:
       - key: NODE_VERSION
         value: 18
@@ -39,6 +40,9 @@ services:
       - path: /*
         name: X-XSS-Protection
         value: 1; mode=block
+      - path: /*
+        name: Cache-Control
+        value: no-cache
     routes:
       - type: rewrite
         source: /*
